# range_mi

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/range_entropy/: expected.hpp  expected_noisy.hpp  grid_expected.hpp  grid_line.hpp
include/range_mi/: barely_distorted.hpp  distorted.hpp  grid_line.hpp  grid_mi.hpp  p_not_measured.hpp
include/wandering_robot/: bresenham.hpp  grid_explorer.hpp  grid_line.hpp  grid_line_2d.hpp  grid_mapper.hpp  grid_mutual_information.hpp  grid_wanderer.hpp  mutual_information.hpp  occupancy_state.hpp
launch/: entropy_visualizer.launch  mi_visualizer.launch  monte_carlo_mi.launch  occupancy_grid_mi.launch  params.yaml
maps/: bucket.yaml  building_31.yaml  building_31_incomplete.yaml  classroom_incomplete.yaml  classroom_incomplete_small.yaml  cubicles.yaml  noise_passages.yaml  random.yaml  shrink_map.py  troll.yaml
msg/: MIGrid.msg
node/: CMakeLists.txt  bresenham_test.cpp  entropy_visualizer.cpp  heatmap.py  map_saver.py  mi_grid_heatmap.py  mi_visualizer.cpp  monte_carlo_mi.cpp  mutual_information.cpp  occupancy_grid_mi.cpp  sample_beams.cpp
pysrc/: demo.py  grid_mi.pyx  image_mi.py  setup.py
src/: barely_distorted.cpp  bresenham.cpp  expected.cpp  expected_noisy.cpp  grid_expected.cpp  grid_line.cpp  grid_line_2d.cpp  grid_mapper.cpp  grid_mi.cpp  grid_mutual_information.cpp  grid_wanderer.cpp  mutual_information.cpp  p_not_measured.cpp
test/: CMakeLists.txt  api_demo.cpp  demo.cpp  distorted_pdf.cpp  fsmi.cpp  grid_line.cpp  grid_line_2d.cpp  helpers.hpp  mi_grid_profile.cpp  mi_joint_vs_single.cpp  mutual_information.cpp  noisy_pdf.cpp  numerical_expected.cpp  numerical_mi.cpp  numerical_mi_distorted.cpp  plot_noisy_pdf.py  profile_2d.cpp  profile_2d_noisy.cpp  profile_grid_fsmi.cpp  profile_grid_mi.cpp  profile_mi.cpp  random_inputs.hpp
