<?xml version="1.0"?>
<package>
  <name>range_mi</name>
  <version>0.0.0</version>
  <description>Tools for computing the mutual information between occupancy maps and range measurements.</description>

  <maintainer email="tfh@mit.edu">tfh</maintainer>

  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
</package>
